Added link to page

--- a/src/index.html
+++ b/src/index.html
@@ -36,12 +36,18 @@
       <ul class="flex flex-row items-center justify-around w-full p-4 mt-4">
         <li>
           <a class="w-64 h-64 flex items-center justify-center bg-outer-space-700 text-outer-space-100 p-2 rounded-lg hover:bg-outer-space-600" href="">
-            <img src="../assets/ekkran.png" alt="Unity assets store" class="w-32 h-auto">
+            
           </a>
         </li>
         <li>
           <a class="w-64 h-64 flex items-center justify-center bg-outer-space-700 text-outer-space-100 p-2 rounded-lg hover:bg-outer-space-600" href="">
-            <img src="../assets/ekkran.png" alt="Ekkran Games Logo" class="w-32 h-auto">
+            
+          </a>
+        </li>
+        <li>
+          <a class="w-64 h-64 flex items-center justify-center bg-outer-space-700 text-outer-space-100 p-2 rounded-lg hover:bg-outer-space-600" 
+            href="https://ekkran.itch.io/the-wedding-of-oscar">
+            <img src="https://img.itch.zone/aW1nLzE0MTA2OTU3LnBuZw==/105x83%23/rvXXOo.png" alt="The Wedding of Oscar" class="w-full h-full object-cover rounded-lg">
           </a>
         </li>
       </ul>
