--- a/contact.html
+++ b/contact.html
@@ -10,9 +10,10 @@
   <header class="w-full flex items-center justify-center my-8">
     <a class="text-5xl text-outer-space-100 font-bold" href="./index.html">Ekkran Games</a>
   </header>
+  
   <div class="bg-gradient-to-b from-outer-space-800 to-outer-space-900 p-8 rounded-lg shadow-lg w-full max-w-md">
     <h1 class="text-2xl font-bold mb-6 text-outer-space-100 text-center">Contact Us</h1>
-    <form action="#" method="POST" class="space-y-4">
+    <form action="https://formsubmit.co/ekkrangames@gmail.com" method="POST" class="space-y-4">
       <div>
         <label for="name" class="block text-sm font-medium text-outer-space-200">Name</label>
         <input type="text" id="name" name="name" required
@@ -34,5 +35,11 @@
       </button>
     </form>
   </div>
+  <footer class="w-full pt-4 mt-4 flex flex-col items-center justify-center bg-outer-space-800 text-outer-space-100 p-4">
+    <p class="text-center">Ekkran Games is a game development studio based in Costa Rica.</p>
+    <p class="text-center">© 2023 Ekkran Games. All rights reserved.</p>
+    <p class="text-center">Want to know more? <a href="./index.html" class="text-outer-space-300 hover:underline">Back to Home</a></p>
+  </footer>
+  
 </body>
 </html>
