--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   
   <div class="bg-gradient-to-b from-outer-space-800 to-outer-space-900 p-8 rounded-lg shadow-lg w-full max-w-md">
     <h1 class="text-2xl font-bold mb-6 text-outer-space-100 text-center">Contact Us</h1>
-    <form action="https://formsubmit.co/ekkrangames@gmail.com" method="POST" class="space-y-4">
+    <form action="https://formsubmit.co/1b279f9694a9aa649dc40e42ebf18ba0" method="POST" class="space-y-4">
       <div>
         <label for="name" class="block text-sm font-medium text-outer-space-200">Name</label>
         <input type="text" id="name" name="name" required
