--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
   <title>Ekkran Games</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Ekkran Games - Game development studio based in Costa Rica, creating tools and solutions for modern game development.">
+  <meta name="keywords" content="Ekkran Games, game development, Costa Rica, game studio, tools, solutions">
+  <meta name="author" content="Ekkran Games">
+  <meta name="theme-color" content="#1a202c">
+  <meta property="og:title" content="Ekkran Games">
+  <meta property="og:description" content="Ekkran Games - Game development studio based in Costa Rica, creating tools and solutions for modern game development.">
+  <meta property="og:image" content="./assets/oscarfondo.png">
+  <meta property="og:url" content="https://ekkrangames.com">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Ekkran Games">
+  <meta name="twitter:description" content="Ekkran Games - Game development studio based in Costa Rica, creating tools and solutions for modern game development.">
+  <meta name="twitter:image" content="./assets/oscarfondo.png">
   <link href="./output.css" rel="stylesheet">
   <link rel="icon" href="./assets/favicon.ico" type="image/x-icon">
   <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
