--- a/index.html
+++ b/index.html
@@ -71,10 +71,11 @@
     </div>
   </main>
   <footer class="w-full pt-4 flex flex-col items-center justify-center bg-outer-space-800 text-outer-space-100 p-4">
-    <p class="text-center">Ekkran Games is a game development studio based in Costa Rica.</p>
+    <p class="text-center">Ekkran Games is a game development studio based in Costa Rica.</p>    
     <p>© 2025 Ekkran Games</p>
     <p>All rights reserved.</p>
     <a href="./contact.html">Contact Us</a>
+    <a href="./support.html">Support</a>
   </footer>
   
 </body>
